--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env BABEL_ENV=default webpack --watch --mode development",
     "build": "cross-env BABEL_ENV=default webpack --mode production"
   },
@@ -15,6 +14,8 @@
     "autoprefixer": "^10.3.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
+    "browser-sync": "^2.27.5",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
     "html-loader": "^2.1.2",
